--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -7,6 +7,9 @@
      using the &ldquo;evaluation block&rdquo; syntax (see below) by setting
      the generic attribute to &ldquo;draw&rdquo;.
      (breaking: zettelmarkup, api, webui)
+  *  If authentication is enabled, a secret of at least 16 bytes must be set in
+     the startup configuration.
+     (breaking)
   *  Add support for an &ldquo;evaluation block&rdquo; syntax in Zettelmarkup
      to allow interpretation of content by external software.
      (minor: zettelmarkup)
