--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -14,6 +14,9 @@
      encoding is much easier to parse, compared with native and ZJSON encoding.
      In most cases it is smaller than ZJSON.
      (breaking: api)
+  *  End point <tt>/r</tt> now returns a map of role names to the list of
+     zettel having this role.
+     (breaking: api)
   *  Add support for an &ldquo;evaluation block&rdquo; syntax in Zettelmarkup
      to allow interpretation of content by external software.
      (minor: zettelmarkup)
