Remove support for default-title
FossilOrigin-Name: a4848b37a172274f17bbf242670d0896eb4c2b21bd38a816a5a7b09a7c0f74f8

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -19,9 +19,9 @@
      <tt>/t</tt> is changed to <tt>/m?_key=tags</tt>. It already returned
      mapping described before.
      (breaking: api)
-  *  Remove support for a default value for metadata key role and syntax. Role
-     is now allowed to be empty, an empty syntax value defaults to
-     &ldquo;plain&rdquo;.
+  *  Remove support for a default value for metadata key title, role, and
+     syntax. Title and role are now allowed to be empty, an empty syntax value
+     defaults to &ldquo;plain&rdquo;.
      (breaking)
   *  Add support for an &ldquo;evaluation block&rdquo; syntax in Zettelmarkup
      to allow interpretation of content by external software.
