Log clien IP address for some more messages
FossilOrigin-Name: 5acba1c21f3b2bed4f2f1f57f8c39e39a41a620e666879ac1d364f2b1cce184b

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -34,9 +34,6 @@
      If a line ending occurs within a quoted attribute value, the line ending
      characters are part of the attributes value.
      (minor: zettelmarkup)
-  *  New startup configuration key <kbd>max-request-size</kbd> to limit a web
-     request body to prevent client sending too large requests.
-     (minor: api, webui)
   *  Zettel 00000000029000 acts as a map of zettel roles to identifier of
      zettel that are included as additional CSS. Allows to display zettel
      differently depending on their role. Use case: slides that are processed
@@ -48,6 +45,12 @@
      (minor: webui)
   *  Allow to use startup configuration, even if started in simple mode.
      (minor)
+  *  Log authentication issues in level "sense"; add caller IP address to some
+     web server log messages.
+     (minor: web server)
+  *  New startup configuration key <kbd>max-request-size</kbd> to limit a web
+     request body to prevent client sending too large requests.
+     (minor: web server)
 
 <a name="0_4"></a>
 <h2>Changes for Version 0.4 (2022-03-08)</h2>
