--- a/www/index.wiki
+++ b/www/index.wiki
@@ -24,13 +24,13 @@ packages may be experimental.
 
 [https://twitter.com/zettelstore|Stay tuned]&hellip;
 <hr>
-<h3>Latest Release: 0.4 (2022-03-08)</h3>
+<h3>Latest Release: 0.5.0 (2022-07-29)</h3>
   *  [./download.wiki|Download]
-  *  [./changes.wiki#0_4|Change summary]
-  *  [/timeline?p=v0.4&bt=v0.3&y=ci|Check-ins for version 0.4],
-     [/vdiff?to=v0.4&from=v0.3|content diff]
-  *  [/timeline?df=v0.4&y=ci|Check-ins derived from the 0.4 release],
-     [/vdiff?from=v0.4&to=trunk|content diff]
+  *  [./changes.wiki#0_5_0|Change summary]
+  *  [/timeline?p=v0.5.0&bt=v0.4&y=ci|Check-ins for version 0.5.0],
+     [/vdiff?to=v0.5.0&from=v0.4|content diff]
+  *  [/timeline?df=v0.5.0&y=ci|Check-ins derived from the 0.5.0 release],
+     [/vdiff?from=v0.5.0&to=trunk|content diff]
   *  [./plan.wiki|Limitations and planned improvements]
   *  [/timeline?t=release|Timeline of all past releases]
 
