Allow to update search expression then viewing list on WebUI
FossilOrigin-Name: 3a13af8829c950a32a3089b153a56b81193fa6cbb60b3933caa7e20217523efa

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -6,6 +6,8 @@
      criterias by using a simple syntax. Can be specified in WebUI's search box
      and via the API by using query parameter "_s".
      (major: api, webui)
+  *  When presenting a zettel list, allow to change the search expression.
+     (minor: webui)
   *  When evaluating a zettel, ignore transclusions if current user is not
      allowed to read transcluded zettel.
      (minor)
