Remove support for translating "..." into &amp;hellip;
FossilOrigin-Name: 1f5d8f719a77cbfb00454f32babd7300e307c915587aa25bf25b79f007f3da5e

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,9 @@
 
 <a name="0_6"></a>
 <h2>Changes for Version 0.6.0 (pending)</h2>
+  *  Translating of "..." into horizontal ellipsis is no longer supported. Use
+     &amp;hellip; instead.
+     (breaking: zettelmarkup)
   *  Allow to specify search expressions, which allow to specify search
      criterias by using a simple syntax. Can be specified in WebUI's search box
      and via the API by using query parameter "_s".
