Update website to v0.6.1
FossilOrigin-Name: 68af7e297998c92f88eb909654425beee298ef2db9950bcfb3bad8f499b64f00

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -23,6 +23,10 @@
      (minor)
 
 <a name="0_6"></a>
+<h2>Changes for Version 0.6.1 (2022-08-22)</h2>
+  *  Ignore empty tags when reading metadata.
+     (bug)
+
 <h2>Changes for Version 0.6.0 (2022-08-11)</h2>
   *  Translating of "..." into horizontal ellipsis is no longer supported. Use
      &amp;hellip; instead.
