Update website to v0.6.2
FossilOrigin-Name: ef4d0160f6f710a998141096ff71d8a3677bf27dbacb1c225e7677705b005625

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -23,6 +23,10 @@
      (minor)
 
 <a name="0_6"></a>
+<h2>Changes for Version 0.6.2 (2022-08-22)</h2>
+  *  Recognize renaming of zettel file external to Zettelstore.
+     (bug)
+
 <h2>Changes for Version 0.6.1 (2022-08-22)</h2>
   *  Ignore empty tags when reading metadata.
      (bug)
