Replace role list by search command (WebUI)
FossilOrigin-Name: e1436279e1f788ee8a4f942b3f22da55132cab006de5a6c6e3c79e9faffb13fd

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -24,6 +24,9 @@
      &ldquo;created&rdquo; or &ldquo;modified&rdquo;, it always contains
      a valid date now.
      (minor)
+  *  Removed template for rendering roles list. This is now done by search
+     commands.
+     (minor: webui)
   *  Cleanup names for HTTP query parameter for API calls. Essentially,
      underscore characters in front are removed. Please use new names, old
      nanmes will be deprecated in version 0.8.
