API: add endpoint /q to query (aggregated) values
FossilOrigin-Name: 684578eea6465616566a31e6316445a2677e986459ea0e087d41dfac7dbcc16d

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -19,6 +19,9 @@
      expression in disjunctive normal form. Therefore, the NEGATE term is not
      needed any more.
      (breaking: api, webui)
+  *  Add endpoint <tt>/q</tt> to query the zettelstore and aggregate resulting
+     values. This is done by extending the search syntax.
+     (major: api)
   *  Add support for metadata key &ldquo;created&rdquo;, a timestamp when the
      zettel was created. Since key &ldquo;published&rdquo; is now either
      &ldquo;created&rdquo; or &ldquo;modified&rdquo;, it always contains
