--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,10 @@
 
 <a name="0_8"></a>
 <h2>Changes for Version 0.8.0 (2022-09-17)</h2>
+  *  Remove support for tags within zettel content. Removes also property
+     metadata keys <tt>all-tags</tt> and <tt>computed-tags</tt>. Deprecated in
+     version 0.7.0.
+     (breaking: zettelmarkup, api, webui)
 
 <a name="0_7"></a>
 <h2>Changes for Version 0.7.0 (pending)</h2>
