Ignore entities with code point that is not allowed in HTML
FossilOrigin-Name: d0ba102a689eb59ceb649bf3d0c19045ddcfa224ed4bc2bb2919eab5accdd542

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,6 +12,8 @@
   *  Remove support for URL query parameter starting with an underscore.
      Deprecated in version 0.7.0.
      (breaking: api, webui)
+  *  Ignore entities with code point that is not allowed in HTML.
+     (minor: zettelmarkup)
 
 <a name="0_7"></a>
 <h2>Changes for Version 0.7.1 (2022-09-18)</h2>
