--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,6 +12,8 @@
   *  Remove support for URL query parameter starting with an underscore.
      Deprecated in version 0.7.0.
      (breaking: api, webui)
+  *  Allow transclusion to reference local image via URL.
+     (minor: zettelmarkup)
   *  Ignore entities with code point that is not allowed in HTML.
      (minor: zettelmarkup)
 
