Added support to create an Atom 1.0 compatible feed
FossilOrigin-Name: b46e4ac07f3905778c8ddb5851a3d8523fa306f0d458a9f8146e3243a955787e

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -21,6 +21,8 @@
      (minor: webui)
   *  Allow transclusion to reference local image via URL.
      (minor: zettelmarkup)
+  *  Add support creating an Atom 1.0 feed using a query action.
+     (minor: api, webui)
   *  Ignore entities with code point that is not allowed in HTML.
      (minor: zettelmarkup)
 
