--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,8 @@
 
 <a name="0_9"></a>
 <h2>Changes for Version 0.9.0 (pending)</h2>
+  *  Add syntax &ldquo;draw&rdquo; (again)
+     (minor: zettelmarkup)
 
 <a name="0_8"></a>
 <h2>Changes for Version 0.8.0 (2022-10-20)</h2>
