Update home page to reference fediverse account
FossilOrigin-Name: 48800d819b8e8d9456011a1f75462c00e0f182a0843e5d6458cfbef0029bb1b6

--- a/www/index.wiki
+++ b/www/index.wiki
@@ -22,7 +22,8 @@ access Zettelstore via its API more easily,
 software, which often connects to Zettelstore via its API. Some of the software
 packages may be experimental.
 
-[https://twitter.com/zettelstore|Stay tuned]&nbsp;&hellip;
+[https://twitter.com/zettelstore|Stay]
+<a rel="me" href="https://nerdculture.de/@zettelstore">tuned</a>&nbsp;&hellip;
 <hr>
 <h3>Latest Release: 0.8.0 (2022-10-20)</h3>
   *  [./download.wiki|Download]
