Add support for file extension .webp
FossilOrigin-Name: fff82e3d20e5d3e2d29e8e17a2c679d842dff220807e9c6ffa0e7669e4c7203a

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,6 +12,8 @@
   *  Allow to encode zettel in Markdown. Please note: not every aspect of
      a zettel can be encoded in Markdown. Those aspects will be ignored.
      (minor: api)
+  *  Interpret zettel files with extension <tt>.webp</tt> as an binary image
+     file format.
 
 <a name="0_8"></a>
 <h2>Changes for Version 0.8.0 (2022-10-20)</h2>
