--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -14,6 +14,10 @@
      (minor: api)
   *  Interpret zettel files with extension <tt>.webp</tt> as an binary image
      file format.
+     (minor)
+  *  Allow to specify service specific log level via statup configuration and
+     via command line.
+     (minor)
 
 <a name="0_8"></a>
 <h2>Changes for Version 0.8.0 (2022-10-20)</h2>
