--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -18,6 +18,8 @@
   *  Allow to specify service specific log level via statup configuration and
      via command line.
      (minor)
+  *  Serve favicon.ico from the asset directory.
+     (minor: webui)
 
 <a name="0_8"></a>
 <h2>Changes for Version 0.8.0 (2022-10-20)</h2>
