Make home-zettel user-specific
FossilOrigin-Name: 1862c0134b247ae60fcb34933dda2166a20ff2cd10e2e4c956a3aef52b8d7593

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -20,6 +20,9 @@
   *  Allow to specify service specific log level via statup configuration and
      via command line.
      (minor)
+  *  Allow to set runtime configuration <tt>home-zettel</tt> in the user zettel
+     to make it user-specific.
+     (minor: webui)
   *  Serve favicon.ico from the asset directory.
      (minor: webui)
 
